fix: corrects spacing for all three contact page titles

--- a/src/contact/contact.scss
+++ b/src/contact/contact.scss
@@ -14,8 +14,8 @@ $bg-secondary: #dfdfdf;
   background-size: cover;
 
   .contact-intro {
-    padding-left: 100px;
-    padding-right: 100px;
+    padding-left: 10%;
+    padding-right: 10%;
     .contact-title {
       font-size: 62px;
       letter-spacing: -0.62px;
@@ -46,6 +46,7 @@ $bg-secondary: #dfdfdf;
        text-align: center;
        color: #3c3d41;
        opacity: 0.7;
+       padding-top: 22px;
        padding-bottom: 67px;
     }
   }
